--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles/style.css" />
-
     <title>Quran Tab landing page</title>
   </head>
   <body>
@@ -21,14 +20,14 @@
           <img
             class="logoContent__logo"
             src="./images/logo.png"
-            alt="Quran Tab Logo"
+            alt="Quran Tabs's Logo"
           />
           Quran Tab
         </div>
         <div class="links">
-          <a href="#features" class="links__link">Features</a
-          ><a href="#download" class="links__link">Download</a
-          ><a href="#faq" class="links__link">FAQ</a>
+          <a class="links__link" href="#features">Features</a>
+          <a class="links__link" href="#download">Download</a>
+          <a class="links__link" href="#faq">FAQ</a>
         </div>
       </header>
 
@@ -48,7 +47,7 @@
               >Get it on Chrome</a
             >
             <a
-              class="section__button button button--secondary"
+              class="section__button button button-secondary"
               target="_blank"
               href="https://bit.ly/qt-edge"
             >
@@ -70,11 +69,11 @@
           <img
             class="section__image"
             src="./images/screen-2.png"
-            alt="Quran Tab's Translation feature"
+            alt="Quran Tab's Hero Image"
           />
         </div>
         <div class="section__content">
-          <h1 class="section__title">+15 Translations</h1>
+          <h2 class="section__title">+15 Translations</h2>
           <p class="section__description">
             Quran Tab supports more than 15 translations of the Quran. You can
             choose your favorite translation from the settings page. You can
@@ -85,7 +84,7 @@
 
       <section class="section">
         <div class="section__content">
-          <h1 class="section__title">Track What’s New</h1>
+          <h2 class="section__title">Track What’s New</h2>
           <p class="section__description">
             Quran Tab keeps you updated with the latest features and updates.
             You can check the changelog from the settings page, What's New tab.
@@ -95,7 +94,7 @@
           <img
             class="section__image"
             src="./images/screen-3.png"
-            alt="Quran Tab's Track update feature"
+            alt="Quran Tab's Hero Image"
           />
         </div>
       </section>
@@ -105,11 +104,11 @@
           <img
             class="section__image"
             src="./images/screen-3.png"
-            alt="Quran Tab's Track update feature"
+            alt="Quran Tab's Hero Image"
           />
         </div>
         <div class="section__content">
-          <h1 class="section__title">Fully English support</h1>
+          <h2 class="section__title">Fully English support</h2>
           <p class="section__description">
             Quran Tab is fully translated into English. You can choose your
             preferred language from the settings page between English and Arabic
@@ -125,8 +124,8 @@
           Microsoft Edge Add-ons Store. It's free and always will be.
         </p>
         <div class="cards">
-          <article class="card">
-            <image
+          <div class="card">
+            <img
               class="card__image"
               src="./images/chrome.svg"
               alt="chrome browser's icon"
@@ -135,33 +134,33 @@
             <a
               class="section__button button card__button"
               href="https://bit.ly/qt-chrome"
-              >install Extension</a
+              >Install Extension</a
             >
-          </article>
-          <article class="card">
-            <image
+          </div>
+          <div class="card">
+            <img
               class="card__image"
               src="./images/microsoft-edge.svg"
-              alt=" edge browser's icon"
+              alt="microsoft edge's icon"
             />
             <h2 class="card__title">Add to Edge</h2>
             <a
               class="section__button button card__button"
               href="https://bit.ly/qt-edge"
-              >install Extension</a
+              >Install Extension</a
             >
-          </article>
-          <article class="card">
-            <image
+          </div>
+          <div class="card">
+            <img
               class="card__image"
               src="./images/firefox.svg"
-              alt="firefox's browser's icon"
+              alt="firefox's icon"
             />
             <h2 class="card__title">Add to Firefox</h2>
-            <a class="section__button button card__button button--disable"
+            <a class="section__button button card__button button--disabled"
               >Coming soon</a
             >
-          </article>
+          </div>
         </div>
       </section>
 
@@ -173,8 +172,8 @@
         </p>
         <ul class="faq">
           <li class="faq__row">
-            <!-- <input type="checkbox" id="faq1" class="faq__input" /> -->
-            <input type="radio" name="faqGroup" id="faq1" class="faq__input" />
+            <input type="checkbox" id="faq1" class="faq__input" />
+            <!-- <input type="radio" name="faqGroup" id="faq1" class="faq__input" /> -->
             <label for="faq1" class="faq__question">What's Quran Tab?</label>
             <img
               class="faq__arrow"
@@ -188,8 +187,8 @@
             </p>
           </li>
           <li class="faq__row">
-            <!-- <input type="checkbox" id="faq2" class="faq__input" /> -->
-            <input type="radio" name="faqGroup" id="faq2" class="faq__input" />
+            <input type="checkbox" id="faq2" class="faq__input" />
+            <!-- <input type="radio" name="faqGroup" id="faq2" class="faq__input" /> -->
             <label for="faq2" class="faq__question">How can I use it?</label>
             <img
               class="faq__arrow"
@@ -203,8 +202,8 @@
             </p>
           </li>
           <li class="faq__row">
-            <!-- <input type="checkbox" id="faq3" class="faq__input" /> -->
-            <input type="radio" name="faqGroup" id="faq3" class="faq__input" />
+            <input type="checkbox" id="faq3" class="faq__input" />
+            <!-- <input type="radio" name="faqGroup" id="faq3" class="faq__input" /> -->
             <label for="faq3" class="faq__question"
               >Is there a mobile app?</label
             >
@@ -218,8 +217,8 @@
             </p>
           </li>
           <li class="faq__row">
-            <!-- <input type="checkbox" id="faq4" class="faq__input" /> -->
-            <input type="radio" name="faqGroup" id="faq4" class="faq__input" />
+            <input type="checkbox" id="faq4" class="faq__input" />
+            <!-- <input type="radio" name="faqGroup" id="faq4" class="faq__input" /> -->
             <label for="faq4" class="faq__question"
               >What about other chromium browsers?</label
             >
@@ -242,7 +241,7 @@
             <img
               class="logoContent__logo"
               src="./images/logo.png"
-              alt="Quran Tab Logo"
+              alt="Quran Tabs's Logo"
             />
             Quran Tab
           </div>
